# MeMoCO-Assignments

./: .gitignore  Example of 1st part output.txt  Example of 2nd part output.txt  README.md
Exercise1/: CMakeLists.txt  Makefile  board_layout.txt  exact_solver_results.txt  ilolpex1.sln  ilolpex1.vcxproj  ilolpex1.vcxproj.filters  tsp.lp
Exercise1/Debug/ilolpex1/: ilolpex1.exe.recipe  ilolpex1.ilk  vc143.idb
Exercise1/Debug/ilolpex1/ilolpex1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ilolpex1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Exercise1/References/: MeMoCo Ex1.xopp
Exercise1/data/large/: board_150x150_1733324821.txt  board_200x200_1733324830.txt
Exercise1/data/medium/: board_100x100_1733324818.txt  board_50x50_1733324817.txt
Exercise1/include/: data_generator.h  model.h
Exercise1/results/: console_output.txt  exact_solver_results.txt
Exercise1/src/: main.cpp  model.cpp
Exercise2/: Makefile  ParameterCalibration.cpp  ParameterCalibration.h  Up next - To implement.txt  board_layout.txt  ilolpex1.sln  ilolpex1.vcxproj  ilolpex1.vcxproj.filters  plot.py  visualization.h
Exercise2/Debug/ilolpex1/: ilolpex1.exe.recipe  ilolpex1.ilk  vc143.idb
Exercise2/include/: TSP.h  TSPMove.h  TSPSolution.h  TSPSolver.h  data_generator.h  parameter_calibration.h  visualization.h
Exercise2/results/: benchmark_results.txt  calibration_results.txt
Exercise2/src/: TSPSolution.cpp  TSPSolver.cpp  main.cpp  parameter_calibration.cpp
(+209 files in other folders)
